add newname willteam

--- a/client/templates/home/home.jade
+++ b/client/templates/home/home.jade
@@ -32,7 +32,7 @@ template(name='home')
 
 	.bandeau.ui.middle.aligned.column.centered.grid
 		.column 	
-			h1 SPORTAPP
+			h1 WILLTEAM
 				//.ui.label 0.2
 			p find your sport team ! Go Go Go !
 			if currentUser
