--- a/client/templates/modals/modalDelete/modalDelete.jade
+++ b/client/templates/modals/modalDelete/modalDelete.jade
@@ -1,11 +1,11 @@
 template(name='modalDelete')
 	.ui.basic.modal.delete
 		h2
-			| Are you sure you want to delete this training?
+			| {{_ "ays_delete_post"}}
 		.actions
 			.ui.red.inverted.button.cancel
 				i.remove.icon
-				| No
+				| {{_ "ays_no"}}
 			.ui.green.inverted.button.approve
 				i.checkmark.icon
-				| Yes
+				| {{_ "ays_yes"}}
