--- a/client/stylesheet/variables.scss
+++ b/client/stylesheet/variables.scss
@@ -1,4 +1,4 @@
-$basecolor: orange;
+$basecolor: #f39c12;
 $darkcolor: darken( $basecolor, 15% );
 $lightcolor: lighten( $basecolor, 15% );
 
@@ -14,9 +14,6 @@ $green: #21ba45;
 $bd-radius:0.28571429rem;
 
 
-
-
-
 $color1:#444;
 $color3:#1b1c1d;
 
@@ -24,10 +21,6 @@ $grey: #4c4f52;
 
 $greylabel: #e8e8e8;
 
-$running:#2980b9;
-$football:#27ae60;
-$workout:#16a085;
-$cycle:#8e44ad;
-$boxing:#e74c3c;
+
 
 
