--- a/client/templates/backoffice/backoffice.jade
+++ b/client/templates/backoffice/backoffice.jade
@@ -5,6 +5,6 @@ template(name='backoffice')
 		a.item(data-template='backPosts', role='presentation')
 			|Posts
 
-	+Template.dynamic template=tab data=tabData}}
+	+Template.dynamic template=tab data=tabData
 
 
