--- a/client/templates/home/home.scss
+++ b/client/templates/home/home.scss
@@ -5,9 +5,9 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	min-width: 100%;
-	min-height: 100%;
-	z-index: -99;
+	min-width: 100vw;
+	min-height: 100vh;
+	z-index: 0;
 	//background-color:rgba(255,255,255,0.4);
 	background-color:rgba(0,0,0,0.75);
 	overflow: hidden;
@@ -83,11 +83,12 @@
 	color:$white;
 	text-align:center;
 	height:100vh;
+	width:100vw;
 	position:absolute;
 	top:0;
 	left:0;
 	right:0;
-	margin:auto;
+	margin:0!important;
 	z-index:0;
 
 	h1{
