--- a/client/templates/modals/modals.scss
+++ b/client/templates/modals/modals.scss
@@ -25,11 +25,28 @@
 }
 
 .ui.tiny.modal.basic.modalUser{
-	width:auto!important;
-	img{
-		border-radius:$bd-radius!important;
+	width:300px!important;
+	.content{
+		width:100%;
+		margin:auto;
+		padding-top: 0px!important;
+		img{
+			border-radius:$bd-radius!important;
+			width:100%;
+		}
+		.extra{		
+				text-align:center;
+
+			margin-top:10px; 
+			white-space: pre-wrap;       /* css-3 */
+			white-space: -moz-pre-wrap;  /* Mozilla */
+			white-space: -pre-wrap;      /* Opera 4-6 */
+			white-space: -o-pre-wrap;    /* Opera 7 */
+		word-wrap: break-word;       /* Internet Explorer 5.5+ */}
 	}
 }
+
+
 
 
 /*==============================
@@ -40,20 +57,16 @@
 		width: 95%;
 		margin: 0em 0em 0em -47.5%;
 	}
-	.ui.tiny.modal.basic.modalUser{
-		width:95%!important;
-		text-align:center;
-		img{
-			width:100%!important;		
-			max-width:300px;
-		}
-	}
-	.modal.signin, .modal.signup, .modal.forgotpass, .modal.newpass, .modal.modalUser{
+	
+	.modal.signin, .modal.signup, .modal.forgotpass, .modal.newpass,{
 		.close.icon{
 			padding: 0;
 			margin: 8px 0 0 0;
 
 		}
+	}
+	.ui.tiny.modal.basic.modalUser{
+		width:95%!important;
 	}
 
 }
@@ -65,19 +78,21 @@
 		width: 300px;
 		margin: 0em 0em 0em -150px;
 	}
-	.modal.signin, .modal.signup, .modal.forgotpass, .modal.newpass, .modal.modalUser{
+
+	.modal.signin, .modal.signup, .modal.forgotpass, .modal.newpass,{
 		.close.icon{
 			padding: 0;
 			margin:0 -5px 0 0;
 		}
 	}
+
 }
 
 /*================================
 =            COMPUTER            =
 ================================*/
 @media only screen and (min-width: 992px) {
-	.modal.signin, .modal.signup, .modal.forgotpass, .modal.newpass, .modal.modalUser{
+	.modal.signin, .modal.signup, .modal.forgotpass, .modal.newpass,{
 		.close.icon{
 			padding: 0;
 			margin:10px 10px 0 0;
