--- a/client/templates/home/home.jade
+++ b/client/templates/home/home.jade
@@ -35,7 +35,7 @@ template(name='home')
 			h1 WILLTEAM
 				//.ui.label 0.2
 			//p find your sport team ! Go Go Go !
-			p The will that we need !
+			p Join a sport team to get the will that you need !
 			//p a team to get will
 			if currentUser
 				a.ui.animated.fade.button.large.basecolor(tabindex='0' href="{{pathFor 'dashboard'}}")
